# photograph-tutor-mvp

./: .env.example  .gitignore  CLAUDE.md  Makefile  README.md  docker-compose.yml  livekit.yaml  plan.md  workflow.md
backend/: Dockerfile  agent.py  pyproject.toml
backend/app/: curriculum.py  database.py  main.py  models.py  settings.py
backend/app/api/: messages.py  progress.py  sessions.py  token.py  topics.py  users.py
backend/openspec/changes/voice-agent/: design.md  tasks.md
backend/openspec/changes/voice-agent/specs/topic-coverage-tracking/: spec.md
backend/openspec/changes/voice-agent/specs/transcript-persistence/: spec.md
docs/proposals/: react-frontend.md  voice-agent.md
frontend/: Dockerfile  package-lock.json  package.json  vite.config.ts
frontend/src/: App.css  App.tsx  api.ts  index.css
frontend/src/components/: NewSessionModal.css  NewSessionModal.tsx  RoomJoin.tsx  SessionView.css  SessionView.tsx  Sidebar.css  Sidebar.tsx  StudyJourneyModal.css  StudyJourneyModal.tsx  Transcript.css  Transcript.tsx
openspec/: config.yaml
openspec/changes/curriculum-design/: design.md  proposal.md  tasks.md
openspec/changes/db-and-api/: design.md  proposal.md  tasks.md
openspec/changes/db-schema-design/: design.md  proposal.md
openspec/changes/enhance-readme-docs/: design.md  proposal.md  tasks.md
openspec/changes/monorepo-scaffold-python-react-livekit/: tasks.md
openspec/changes/react-frontend/: design.md  proposal.md  tasks.md
openspec/changes/study-journey/: design.md  (+2 more)
openspec/specs/: project-requirements.md  propose-guide.md
(+31 files in other folders)
