[project]
name = "photograph-tutor-backend"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.30",
    "sqlalchemy[asyncio]>=2.0",
    "aiosqlite>=0.20",
    "pydantic-settings>=2.0",
    "livekit-agents>=1.5",
    "livekit-api>=1.0",
    "livekit-plugins-openai>=1.5",
    "livekit-plugins-silero>=1.5",
    "httpx>=0.27",
    "python-dotenv>=1.0",
]

[tool.uv]
package = false

[dependency-groups]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
]
